--- a/API/static/css/style.css
+++ b/API/static/css/style.css
@@ -1,9 +1,8 @@
 body {
     text-align: center;
-    background-color: SlateGrey;
+    background-color: #d8d8d8;
 }
 p {
-    color: white;
     font-size: 1.2em;
     display: inline-block;
     margin:  20px;
@@ -17,9 +16,13 @@ input {
   margin: 20px 20px;
   height: 50px;
   border: none;
-  border-radius: 5px;
+  border-radius: 50px;
   font-size: 1.3em;
   text-align: center;
+}
+footer {
+    font-size: 1.2em;
+    margin:  20px;
 }
 
 input:focus {
