--- a/API/templates/result.html
+++ b/API/templates/result.html
@@ -2,19 +2,13 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Tableau de bord</title>
+        <title>Client {{ ID_client }}</title>
         <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css')}}">
     </head>
     <body>
         <img src="https://raw.githubusercontent.com/charlottemllt/Projet-7/main/API/logo.jpg">
         <br>
-        <form action="predict/" method="post">
-            <p>Entrez l'ID du client</p>
-            <br>
-            <input type="int" name="ID_client">
-            <br>
-            <input type="submit" value="Prédire" id="bouton_predire">
-        </form>
+        <p>Pour le client {{ ID_client }} : {{ prediction }}</p>
     </body>
     <footer class="text-center">
         <div class="footer-below">
